2006-04-04  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Strip leading and training spaces from search terms
	Fixes #334568
	
2006-04-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-db-print-pager.c: (db_print_pager_dispose):
	* src/yelp-main.c: (slowly_and_stupidly_obtain_timestamp):
	* src/yelp-man-parser.c:
	* src/yelp-toc-pager.c: (process_mandir_pending),
	(xslt_yelp_document):
	* src/yelp-utils.c: (yelp_get_man_paths):
	* src/yelp-utils.h:
	Fix various compiler warnings, patch by Don Scorgie.  Fixes #326290

2006-04-03  Brent Smith  <gnome@nextreality.net>

	* data/man.xml.in: Add 3perl to the Perl Functions section

2006-04-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-search-pager.c: (snippet_closed), (snippet_response),
	(snippet_error), (finished_cb): various beagle signal and refcount
	fixes, patch from Joe Shaw.  Fixes #334938

2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>

	* configure.in: Re-added 'or' (Oriya) to ALL_LINGUAS, after
	doing a "cvs add" for po/or.po  

2006-04-02  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	Remove "or" from ALL_LINGUAS since this breaks the build.
	* src/yelp-toc-pager.c: (toc_pager_dispose),
	(process_read_scrollkeeper), (files_are_equivalent),
	(process_omf_pending):
	oops, delete some debugging messages and clean up some compile
	warnings

2006-04-02  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (toc_process_pending), (sk_characters),
	(process_read_scrollkeeper), (files_are_equivalent),
	(get_omf_attributes), (create_toc_from_omf_cache_file),
	(process_omf_pending), (process_read_menu), (xslt_yelp_document):
	Cache information from OMF files to ~/.gnome2/yelp.d/omfindex.xml;
	Please see bug #336699.

2006-04-01  Gora Mohanty  <gmohanty@cvs.gnome.org>

	* configure.in: Added 'or' (Oriya) to ALL_LINGUAS.

2006-04-01  Brent Smith  <gnome@nextreality.net>

	* data/ui/yelp-ui.xml:
	Add "Contents" entry to the Help menu
	* src/yelp-main.c: (main):